# selfserv-daemon

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.multiarch  LICENSE.md  README.md  selfserv.example.service
.github/workflows/: build_images.yaml
src/: main.rs
