[package]
authors = ["fpgaminer"]
description = "selfserv daemon"
edition = "2018"
license = "MIT"
name = "selfserv-daemon"
readme = "README.md"
repository = "https://github.com/fpgaminer/selfserv-daemon"
version = "0.2.1"
homepage = "https://github.com/fpgaminer/selfserv-daemon"
documentation = "https://docs.rs/selfserv-daemon"

[dependencies]
anyhow = "1.0.91"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }