[package]
authors = ["fpgaminer"]
description = "selfserv daemon"
edition = "2018"
license = "MIT"
name = "selfserv-daemon"
readme = "README.md"
repository = "https://github.com/fpgaminer/selfserv-daemon"
version = "0.2.1"
homepage = "https://github.com/fpgaminer/selfserv-daemon"
documentation = "https://docs.rs/selfserv-daemon"

[dependencies]
anyhow = "1"
reqwest = { version = "0.13", features = ["blocking", "json", "form"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }